# appmenu-gtk-mo

./: 80appmenu.in  AUTHORS  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure.ac
debian/: changelog  control  rules  watch
src/: Makefile.am  Makefile.in  application-menu-registrar.xml  bridge.c  bridge.h
